// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderPerFileMarkdown > matches snapshot for canonical fixture sizes (1 / 5 / 10 / 50) > fixture-1-files 1`] = `
"### Top changed files (1)

| File | Tokens Δ | USD Δ |
|---|---:|---:|
| \`m0.md\` | +75 | +$0.001125 |"
`;

exports[`renderPerFileMarkdown > matches snapshot for canonical fixture sizes (1 / 5 / 10 / 50) > fixture-5-files 1`] = `
"### Top changed files (5)

| File | Tokens Δ | USD Δ |
|---|---:|---:|
| \`m4.md\` | +335 | +$0.005025 |
| \`m3.md\` | +270 | +$0.004050 |
| \`m2.md\` | +205 | +$0.003075 |
| \`m1.md\` | +140 | +$0.002100 |
| \`m0.md\` | +75 | +$0.001125 |"
`;

exports[`renderPerFileMarkdown > matches snapshot for canonical fixture sizes (1 / 5 / 10 / 50) > fixture-10-files 1`] = `
"### Top changed files (5)

| File | Tokens Δ | USD Δ |
|---|---:|---:|
| \`m9.md\` | +660 | +$0.009900 |
| \`m8.md\` | +595 | +$0.008925 |
| \`m6.md\` | +465 | +$0.006975 |
| \`a7.md\` (+) | +400 | +$0.006000 |
| \`m5.md\` | +400 | +$0.006000 |

<details><summary>All 10 files</summary>

| File | Tokens Δ | USD Δ |
|---|---:|---:|
| \`m9.md\` | +660 | +$0.009900 |
| \`m8.md\` | +595 | +$0.008925 |
| \`m6.md\` | +465 | +$0.006975 |
| \`a7.md\` (+) | +400 | +$0.006000 |
| \`m5.md\` | +400 | +$0.006000 |
| \`m4.md\` | +335 | +$0.005025 |
| \`m3.md\` | +270 | +$0.004050 |
| \`m2.md\` | +205 | +$0.003075 |
| \`m1.md\` | +140 | +$0.002100 |
| \`m0.md\` | +75 | +$0.001125 |

</details>"
`;

exports[`renderPerFileMarkdown > matches snapshot for canonical fixture sizes (1 / 5 / 10 / 50) > fixture-50-files 1`] = `
"### Top changed files (5)

| File | Tokens Δ | USD Δ |
|---|---:|---:|
| \`m48.md\` | +3,195 | +$0.0479 |
| \`m47.md\` | +3,130 | +$0.0469 |
| \`m46.md\` | +3,065 | +$0.0460 |
| \`m45.md\` | +3,000 | +$0.0450 |
| \`m43.md\` | +2,870 | +$0.0431 |

<details><summary>All 50 files</summary>

| File | Tokens Δ | USD Δ |
|---|---:|---:|
| \`m48.md\` | +3,195 | +$0.0479 |
| \`m47.md\` | +3,130 | +$0.0469 |
| \`m46.md\` | +3,065 | +$0.0460 |
| \`m45.md\` | +3,000 | +$0.0450 |
| \`m43.md\` | +2,870 | +$0.0431 |
| \`m41.md\` | +2,740 | +$0.0411 |
| \`m40.md\` | +2,675 | +$0.0401 |
| \`m39.md\` | +2,610 | +$0.0391 |
| \`m38.md\` | +2,545 | +$0.0382 |
| \`a49.md\` (+) | +2,500 | +$0.0375 |
| \`m37.md\` | +2,480 | +$0.0372 |
| \`m36.md\` | +2,415 | +$0.0362 |
| \`m34.md\` | +2,285 | +$0.0343 |
| \`m32.md\` | +2,155 | +$0.0323 |
| \`a42.md\` (+) | +2,150 | +$0.0323 |
| \`m31.md\` | +2,090 | +$0.0314 |
| \`m30.md\` | +2,025 | +$0.0304 |
| \`m29.md\` | +1,960 | +$0.0294 |
| \`m27.md\` | +1,830 | +$0.0275 |
| \`a35.md\` (+) | +1,800 | +$0.0270 |
| \`m26.md\` | +1,765 | +$0.0265 |
| \`m25.md\` | +1,700 | +$0.0255 |
| \`m24.md\` | +1,635 | +$0.0245 |
| \`m23.md\` | +1,570 | +$0.0236 |
| \`a28.md\` (+) | +1,450 | +$0.0218 |
| \`m20.md\` | +1,375 | +$0.0206 |
| \`d44.md\` (−) | −1,350 | −$0.0203 |
| \`m19.md\` | +1,310 | +$0.0197 |
| \`m18.md\` | +1,245 | +$0.0187 |
| \`m17.md\` | +1,180 | +$0.0177 |
| \`m16.md\` | +1,115 | +$0.0167 |
| \`a21.md\` (+) | +1,100 | +$0.0165 |
| \`m15.md\` | +1,050 | +$0.0158 |
| \`d33.md\` (−) | −1,020 | −$0.0153 |
| \`m13.md\` | +920 | +$0.0138 |
| \`m12.md\` | +855 | +$0.0128 |
| \`a14.md\` (+) | +750 | +$0.0112 |
| \`m10.md\` | +725 | +$0.0109 |
| \`d22.md\` (−) | −690 | −$0.0103 |
| \`m9.md\` | +660 | +$0.009900 |
| \`m8.md\` | +595 | +$0.008925 |
| \`m6.md\` | +465 | +$0.006975 |
| \`a7.md\` (+) | +400 | +$0.006000 |
| \`m5.md\` | +400 | +$0.006000 |
| \`d11.md\` (−) | −360 | −$0.005400 |
| \`m4.md\` | +335 | +$0.005025 |
| \`m3.md\` | +270 | +$0.004050 |
| \`m2.md\` | +205 | +$0.003075 |
| \`m1.md\` | +140 | +$0.002100 |
| \`m0.md\` | +75 | +$0.001125 |

</details>"
`;
